# SoulAsr

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  app.py  pyproject.toml  requirements.txt
backend/config/: model_registry.example.json
backend/src/: main.py
backend/src/api/: deps.py
backend/src/api/v1/: asr.py  models.py  system.py
backend/src/core/: config.py  logging_config.py
backend/src/engines/: __init__.py  base_engine.py  funasr_engine.py  paraformer_engine.py  qwen3_asr_engine.py  whisper_engine.py  zipformer_engine.py
backend/src/schemas/: asr.py  batch.py  metrics.py  system.py
backend/src/services/: asr_service.py  audio_processor.py  model_manager.py  streaming_vad.py  system_monitor.py  vad_provider.py  vad_service.py
backend/src/utils/: file_ops.py
backend/tests/: test_asr.py
docs/: project_preview.txt  产品说明.txt
docs/backend/: 后端代码提示词.txt  后端实现说明.md
docs/frontend/: UI视觉风格说明书.md  前端代码提示词.txt  前端实现说明.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.vue  main.ts
frontend/src/api/: asr.ts  client.ts  system.ts
frontend/src/assets/: base.css
frontend/src/components/: MetricCard.vue  WaveformPlayer.vue
frontend/src/composables/: useWebSocket.ts
frontend/src/router/: index.ts
frontend/src/store/: batch.ts  system.ts
frontend/src/types/: asr.ts  batch.ts  system.ts
frontend/src/utils/: audioStream.ts  exportReport.ts  microphoneStream.ts
frontend/src/views/: BatchTest.vue  Dashboard.vue  DebugWorkbench.vue
(+3 files in other folders)
