[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1,<1.0.0",
    "funasr>=1.3.1,<2.0.0",
    "httpx>=0.28.1,<1.0.0",
    "nacos-sdk-python>=3.0.4,<4.0.0",
    "numpy>=2.4.3,<3.0.0",
    "pydantic-settings>=2.14.1",
    "pyrnnoise>=0.4.3",
    "pyyaml>=6.0.3,<7.0.0",
    "redis[asyncio]>=7.4.0,<8.0.0",
    "scipy>=1.14.0,<2.0.0",
    "sherpa-onnx>=1.13.2",
    "torch>=2.10.0,<3.0.0",
    "torchaudio>=2.10.0,<3.0.0",
    "uvicorn[standard]>=0.42.0,<1.0.0",
]
